--- a/templates/rango/about.html
+++ b/templates/rango/about.html
@@ -9,7 +9,7 @@
     <h1>Rango says...</h1>
     <div>
         here is the about page. <br />
-        <strong>This tutorial has been put together by Gareth</strong><br />
+        <strong>This tutorial has been put together by Hugh</strong><br />
       </div>
       <div>
         <a href="/rango/">Home</a>
