--- a/templates/rango/index.html
+++ b/templates/rango/index.html
@@ -19,7 +19,9 @@
       {% if categories %}
       <ul>
         {% for category in categories %}
-        <li>{{ category.name }}</li>
+        <li>{{ category.name }}
+          <a href="/rango/category/{{ category.slug }}/">{{ category.name }}</a>
+        </li>
         {% endfor %}
       </ul>
       {% else %}
