--- a/templates/rango/index.html
+++ b/templates/rango/index.html
@@ -3,35 +3,52 @@
 {% load staticfiles %}
 
 <html>
-  <head>
+
+<head>
     <title>Rango</title>
-  </head>
+</head>
 
-  <body>
-    <h1>Rango says..</h1>
+<body>
+<h1>Rango says..</h1>
 
-    <div>
-      hey there partner! <br />
-      <strong>{{ boldmessage }}</strong><br />
-    </div>
+<div>
+    hey there partner! <br/>
+    <strong>{{ boldmessage }}</strong><br/>
+</div>
 
-    <div>
-      {% if categories %}
-      <ul>
+<div>
+    {% if categories %}
+    <h2>Most Liked Categories</h2>
+    <ul>
         {% for category in categories %}
-        <li>{{ category.name }}
-          <a href="/rango/category/{{ category.slug }}/">{{ category.name }}</a>
+        <li>
+            <a href="/rango/category/{{ category.slug }}/">{{ category.name }}</a></li>
+        {% endfor %}
+    </ul>
+    {% else %}
+    <strong>There are no categories present.</strong>
+    {% endif %}
+</div>
+
+<div>
+    {% if pages %}
+    <h2>Most Viewed Pages</h2>
+    <ul>
+        {% for page in pages %}
+        <li>
+            <a href="{{ page.url }}">{{ page.title }}</a>
         </li>
         {% endfor %}
-      </ul>
-      {% else %}
-      <strong>There are no categories present</strong>
+    </ul>
+    {% else %}
+    <strong>There are no pages present.</strong>
     {% endif %}
-    </div>
+</div>
 
-    <div>
-      <a href="/rango/about/">About</a><br />
-      <img src="{% static 'images/rango.jpg' %}" alt="Picture of Rango" />
-    </div>
-  </body>
+<div>
+    <a href="/rango/about/">About Rango</a><br/>
+    <img src="{% static 'images/rango.jpg' %}" alt="Picture of Rango"/>
+</div>
+</body>
+
 </html>
