--- a/templates/rango/category.html
+++ b/templates/rango/category.html
@@ -3,24 +3,31 @@
 <head>
     <title>Rango</title>
 </head>
+
 <body>
-<div>
-    {% if category %}
-    <h1>{{ category.name }}</h1>
-    {% if pages %}
-    <ul>
-        {% for page in pages %}
-        <li><a href="{{ page.url }}">{{ page.title }}</a></li>
-        {% endfor %}
-    </ul>
-    {% else %}
-    <strong>No pages currently in category.</strong>
-    {% endif %}
-    {% else %}
-    The specified category does not exist.
-    {% endif %}
-    <a href="/rango/">Home</a>
-</div>
+    <div>
+        {% if category %}
+        <h1>{{category.name}}</h1>
+        {% if pages %}
+        <ul>
+            {% for page in pages %}
+            <li><a href="{{ page.url }}">{{ page.title }}</a></li>
+            {% endfor %}
+        </ul>
+        {% else %}
+        <strong>No pages currently in category.</strong>
+        {% endif %}
+        {% else %}
+        The specified category does not exist.
+        {% endif %}
+    </div>
+    <div>
+        {% if category %}
+        <a href="/rango/category/{{category.slug}}/add_page">Add Page</a><br />
+        {% endif %}
+        <a href="/rango/">Home</a>
+    </div>
 
 </body>
+
 </html>
