--- a/templates/rango/add_category.html
+++ b/templates/rango/add_category.html
@@ -1,13 +1,14 @@
-<!DOCTYPE html>
+{% extends 'rango/base.html' %}
+{% load staticfiles %}
 
-<head>
-    <title>Rango</title>
-</head>
+{% block title_block %}
+    Add a Category
+{% endblock %}
 
-<body>
+{% block body_block %}
     <h1>Add a Category</h1>
     <div>
-        <form id="category_form" method="post" action="/rango/add_category/">
+        <form id="category_form" method="post" action="'rango:add_category'">
             {% csrf_token %}
             {% for hidden in form.hidden_fields %}
                 {{ hidden }}
@@ -20,6 +21,5 @@
             <input type="submit" name="submit" value="Create Category" />
         </form>
     </div>
-</body>
+{% endblock %}
 
-</html>
