--- a/templates/rango/add_page.html
+++ b/templates/rango/add_page.html
@@ -1,14 +1,14 @@
-<!DOCTYPE html>
-<html lang="en">
+{% extends 'rango/base.html' % }
+{% load staticfiles %}
 
-<head>
-    <title>Rango</title>
-</head>
+{% block title_block %}
+    Add a Page
+{% endblock %}
 
-<body>
-    <h1>Add a Page</h1>
+{% block body_block %}
+<h1>Add a Page to {{ category.name }}</h1>
     <div>
-        <form id="category_form" method="post" action="/rango/category/{{ category.slug }}/add_page/">
+        <form id="category_form" method="post" action="'rango:add_page' category.slug /add_page/">
             {% csrf_token %}
             {% for hidden in form.hidden_fields %}
             {{ hidden }}
@@ -21,6 +21,5 @@
             <input type="submit" name="submit" value="Add Page" />
         </form>
     </div>
-</body>
+{% endblock %}
 
-</html>
