--- a/templates/rango/base.html
+++ b/templates/rango/base.html
@@ -6,7 +6,7 @@
     <title>
         Rango -
         {% block title_block %}
-            How to Tango with Django
+            How to Tango with Django!
         {% endblock %}
     </title>
 </head>
