--- a/templates/rango/index.html
+++ b/templates/rango/index.html
@@ -1,15 +1,12 @@
-<!DOCTYPE html>
-
+{% extends 'rango/base.html' %}
 {% load staticfiles %}
 
-<html>
+{% block title_block %}
+    Homepage
+{% endblock %}
 
-<head>
-    <title>Rango</title>
-</head>
-
-<body>
-<h1>Rango says..</h1>
+{% block body_block %}
+<h1>Rango says...</h1>
 
 <div>
     hey there partner! <br/>
@@ -22,7 +19,7 @@
     <ul>
         {% for category in categories %}
         <li>
-            <a href="/rango/category/{{ category.slug }}/">{{ category.name }}</a></li>
+            <a href="{% url 'rango:show_category' category.slug %}">{{ category.name }}</a></li>
         {% endfor %}
     </ul>
     {% else %}
@@ -44,12 +41,5 @@
     <strong>There are no pages present.</strong>
     {% endif %}
 </div>
-
-<div>
-    <a href="/rango/add_category/">Add a New Category</a><br />
-    <a href="/rango/about/">About Rango</a><br/>
-    <img src="{% static 'images/rango.jpg' %}" alt="Picture of Rango"/>
-</div>
-</body>
-
-</html>
+<img src="{% static 'images/rango.jpg' %}" alt="Picture of Rango" />
+{% endblock %}
