--- a/templates/rango/category.html
+++ b/templates/rango/category.html
@@ -2,8 +2,12 @@
 {% load staticfiles %}
 
 {% block title_block %}
-    Add a Category
-{% endblock %}
+{% if category %}
+{{ category.name }}
+{% else %}
+Unknown Category
+{% endif %}
+{% endblock %}'
 
 {% block body_block %}
 <h1>Add a Category</h1>
