--- a/templates/rango/category.html
+++ b/templates/rango/category.html
@@ -10,19 +10,22 @@ Unknown Category
 {% endblock %}'
 
 {% block body_block %}
-<h1>Add a Category</h1>
-<div>
-    <form id="category_form" method="post" action="{% url 'rango:add_category' %}">
-        {% csrf_token %}
-        {% for hidden in form.hidden_fields %}
-            {{ hidden }}
-        {% endfor %}
-        {% for field in form.visible_fields %}
-            {{ field.errors }}
-            {{ field.help_text }}
-            {{ field }}
-        {% endfor %}
-        <input type="submit" name="submit" value="Create Category" />
-    </form>
-</div>
+{% if category %}
+<h1>{{category.name}}</h1>
+{% if pages %}
+<ul>
+    {% for page in pages %}
+    <li><a href="{{ page.url }}">{{ page.title }}</a></li>
+    {% endfor %}
+</ul>
+
+{% else %}
+<strong>No pages currently in category.</strong>
+{% endif %}
+{% if user.is_authenticated %}
+<a href="{% url 'rango:add_page' category.slug %}">Add Page</a><br />
+{% endif %}
+{% else %}
+The specified category does not exist.
+{% endif %}
 {% endblock %}
