--- a/templates/rango/about.html
+++ b/templates/rango/about.html
@@ -2,19 +2,22 @@
 {% load staticfiles %}
 
 {% block title_block %}
-    About Rango
+About Rango
 {% endblock %}
 
 {% block body_block %}
-    <h1>Rango says...</h1>
-    <div>
-        here is the about page. <br />
-        <strong>This tutorial has been put together by Hugh</strong><br />
-      </div>
-      <div>
-          <a href="/rango/">Home</a>
-        <br />
-        <img src="{% static 'images/rango.jpg' %}" alt="Picture of Rango" />
-        <img src="{{ MEDIA_URL }}cat.jpg" alt="Picture of a Cat" />
-      </div>
+<h1>Rango says...</h1>
+<div>
+    here is the about page. <br/>
+    <strong>This tutorial has been put together by Hugh</strong><br/>
+</div>
+<div>
+    Visits: {{ visits }}
+</div>
+<div>
+    <a href="/rango/">Home</a>
+    <br/>
+    <img src="{% static 'images/rango.jpg' %}" alt="Picture of Rango"/>
+    <img src="{{ MEDIA_URL }}cat.jpg" alt="Picture of a Cat"/>
+</div>
 {% endblock %}
